Fix timeout-recovery to disable all return-path copies of a stuck invariant
Replace the source-patching commentOutInvariantRegion approach with a runtime
DISABLED set in DpRuntime. When a run times out, JavaRunner.disableInvariant()
appends the stuck UUID to a disabled-invariants.txt file. On the next attempt
the child JVM receives -DDP_DISABLED_FILE=<path> and DpRuntime loads the set
at class-init time; every injected guard checks DISABLED.contains(__dp_id)
before evaluating, so all return-path copies of the same UUID are silenced
simultaneously without touching source or requiring a recompile.

https://claude.ai/code/session_016mPvNLJjprvFmwahfGYkq7